# 444

./: .gitignore  BASE.html  KPT.html  PERIMETR.html  README.md  app.py  build.bat  build.gradle.kts  build.sh  gradle.properties  package-lock.json  package.json  requirements.txt  run.bat  server.js  settings.gradle.kts  start.bat  test_anim.html  ПРОТОКОЛ ПЕРИМЕТР.docx  СТРЕССОУСТОЙЧИВОСТЬ ПО МЕТОДИКАМ СПЕЦСЛУЖБ ДЛЯ ПРЕДПРИНИМАТЕЛЯ.docx
composeApp/: build.gradle.kts
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
gradle/: libs.versions.toml
mobile_app/: BASE.html  BUILD_ANDROID.md  KPT.html  PERIMETR.html  capacitor.config.json  index.html  package.json
perimetr/: package-lock.json  package.json  tailwind.config.js
perimetr-app/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  perimetr.db  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo
perimetr-app/assets/: style.css
perimetr-app/public/: KPT.html  PERIMETR.html  knowledge.html
perimetr-app/src/: App.svelte  base_timer.rs  db.rs  kpt.rs  main.rs  main.ts  perimetr.rs  style.css
perimetr-app/src-tauri/: Cargo.toml  tauri.conf.json
perimetr-app/src-tauri/capabilities/: default.json
perimetr-app/src-tauri/src/: db.rs  lib.rs
perimetr-app/src/data/: docs_content.json
perimetr-app/src/lib/: Sidebar.svelte  db.ts
perimetr-app/src/routes/: Base.svelte  Dashboard.svelte  Knowledge.svelte  Kpt.svelte
perimetr/src-tauri/: Cargo.toml  tauri.conf.json
perimetr/src-tauri/src/: db.rs  lib.rs  main.rs
public/: BASE.html  app.js  (+2 more)
(+49 files in other folders)
