[package]
name = "perimetr-app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.5", features = ["desktop"] }
dioxus-logger = "0.7.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
